src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Web</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Desarrollo</fullName>
        </values>
        <values>
            <fullName>Envío a Evaluar</fullName>
        </values>
        <values>
            <fullName>No asiste</fullName>
        </values>
        <values>
            <fullName>No simula</fullName>
        </values>
        <values>
            <fullName>Prospección</fullName>
        </values>
        <values>
            <fullName>Simula</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renovación</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada perdida</fullName>
        </values>
        <values>
            <fullName>Envío a Evaluar</fullName>
        </values>
        <values>
            <fullName>Negociación</fullName>
        </values>
        <values>
            <fullName>Pre evaluación</fullName>
        </values>
        <values>
            <fullName>Preparación de propuesta</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simulación CORE</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Adjudicación</fullName>
        </values>
        <values>
            <fullName>Cerrada ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada perdida</fullName>
        </values>
        <values>
            <fullName>Checklist</fullName>
        </values>
        <values>
            <fullName>Envío a Evaluar</fullName>
        </values>
        <values>
            <fullName>Firma documentación</fullName>
        </values>
        <values>
            <fullName>Formalización</fullName>
        </values>
        <values>
            <fullName>Pre evaluación</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_o_Veh_culo__c</fullName>
        <label>Año Vehículo</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activo</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ano__c</fullName>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano_otros_ingresos__c</fullName>
        <label>Año</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ano_retoma__c</fullName>
        <label>Año</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiguedad_empleo_anterior__c</fullName>
        <label>Antiguedad empleo anterior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arriendo__c</fullName>
        <label>Arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asisti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asistió?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banco_cuenta_1__c</fullName>
        <label>Banco cuenta 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Banco</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banco_cuenta_2__c</fullName>
        <label>Banco cuenta 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Banco</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAE__c</fullName>
        <label>CAE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_digo_Producto__c</fullName>
        <label>Código Producto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_final__c</fullName>
        <label>Capital final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_158__c</fullName>
        <label>Código 158</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Codigo_170__c</fullName>
        <label>Código 170</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Codigo_18__c</fullName>
        <label>Código 18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Codigo_Concesionario__c</fullName>
        <label>Codigo_Concesionario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Importador__c</fullName>
        <label>Codigo_Importador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comision_dealer__c</fullName>
        <label>Comisión dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comuna__c</fullName>
        <label>Comuna</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regi_n__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Comuna</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comuna_empleador__c</fullName>
        <label>Comuna empleador</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_empleador__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Comuna</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concesionario_Owner__c</fullName>
        <label>Concesionario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concesionarios__c</fullName>
        <label>Concesionarios</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Importadora__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Concesionario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirma_Asistencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirma Asistencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contactar_Cliente_MC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo controla si el cliente desea ser contactado mediante una campaña de MC</description>
        <label>Contactar Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConteoCarta__c</fullName>
        <label>ConteoCarta</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costo_de_accion__c</fullName>
        <label>Costo de acción</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_total_credito__c</fullName>
        <label>Costo total crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cr_dito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crédito</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Oportunidades (Crédito)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cuot_n__c</fullName>
        <label>Cuotón</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuotas__c</fullName>
        <label>Cuotas</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_egresos__c</fullName>
        <label>Descripción otros egresos</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_ingresos__c</fullName>
        <label>Descripción otros ingresos</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detalles_retoma__c</fullName>
        <label>Detalles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deuda_retoma__c</fullName>
        <label>Deuda</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Dirección</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_empleador__c</fullName>
        <label>Dirección empleador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dividendo__c</fullName>
        <label>Dividendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ejecutado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ejecutado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empleador__c</fullName>
        <label>Empleador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empleador_anterior__c</fullName>
        <label>Empleador anterior</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_Financiera__c</fullName>
        <label>Entidad Financiera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Entidades_Financieras</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Envio_Correo_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envio Correo - Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envio_SMS_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envio SMS - Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_Actividad__c</fullName>
        <description>Se trae el estado de actividad del último registro de contactabilidad creado para la oportunidad.</description>
        <label>Estado Actividad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Asistencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estado Asistencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                    <label>Casado</label>
                </value>
                <value>
                    <fullName>EP</fullName>
                    <label>Conviviente civil</label>
                </value>
                <value>
                    <fullName>SL</fullName>
                    <label>Divorciado</label>
                </value>
                <value>
                    <fullName>SH</fullName>
                    <label>Separado</label>
                </value>
                <value>
                    <fullName>SO</fullName>
                    <label>Soltero</label>
                </value>
                <value>
                    <fullName>VI</fullName>
                    <label>Viudo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_contacto_telefonico_agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estado contacto - telefonico agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estudios__c</fullName>
        <label>Nivel de estudios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PR</fullName>
                    <label>PRIMARIOS</label>
                </value>
                <value>
                    <fullName>SE</fullName>
                    <label>SECUNDARIOS</label>
                </value>
                <value>
                    <fullName>SU</fullName>
                    <label>SUPERIORES</label>
                </value>
                <value>
                    <fullName>PO</fullName>
                    <label>POSTGRADO</label>
                </value>
                <value>
                    <fullName>OT</fullName>
                    <label>OTROS</label>
                </value>
                <value>
                    <fullName>MA</fullName>
                    <label>MAGISTER</label>
                </value>
                <value>
                    <fullName>SN</fullName>
                    <label>SUPERIOR NO TERMINADO</label>
                </value>
                <value>
                    <fullName>Básica</fullName>
                    <isActive>false</isActive>
                    <label>Básica</label>
                </value>
                <value>
                    <fullName>Media</fullName>
                    <isActive>false</isActive>
                    <label>Media</label>
                </value>
                <value>
                    <fullName>Superior completa</fullName>
                    <isActive>false</isActive>
                    <label>Superior completa</label>
                </value>
                <value>
                    <fullName>Superior incompleta</fullName>
                    <isActive>false</isActive>
                    <label>Superior incompleta</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_Transacci_n__c</fullName>
        <label>Fecha Transacción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_agenda__c</fullName>
        <label>Fecha de agenda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ingreso__c</fullName>
        <label>Fecha de ingreso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folio__c</fullName>
        <label>Folio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formalizacion_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formalización OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horario__c</fullName>
        <label>Horario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>am</fullName>
                </value>
                <value>
                    <fullName>pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Solicitud_Origen__c</fullName>
        <formula>Solicitud_Origen__r.Id_Solicitud__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Solicitud Origen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Solicitud__c</fullName>
        <externalId>true</externalId>
        <label>Id Solicitud</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_Tripleta__c</fullName>
        <label>Id Tripleta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importador_Owner__c</fullName>
        <label>Importador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importadora__c</fullName>
        <label>Importadora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Importadores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingresa_c_digo_ID_Cr_dito__c</fullName>
        <description>No se sabe para que es. Fue creado por nectia.</description>
        <label>Ingresa ID Crédito Original</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kilometraje_retoma__c</fullName>
        <label>Kilometraje</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>notEqual</operation>
                <value>Integración</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Local__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locales__c</fullName>
        <label>Locales</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Concesionarios__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Locales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca_del_Vehiculo_n_mero__c</fullName>
        <label>Marca del Vehiculo número</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marca_retoma__c</fullName>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca_vehiculo__c</fullName>
        <label>Marca vehículo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margen_nuevo_vehiculo__c</fullName>
        <label>Margen nuevo vehículo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margen_vehiculo_usado__c</fullName>
        <label>Margen vehículo usado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modelo2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modelo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Modelo_de_vehiculo__c.Marca__c</field>
                <operation>equals</operation>
                <valueField>$Source.Marca_vehiculo__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Modelo_de_vehiculo__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modelo2_retoma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modelo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Marca_retoma__c</field>
                <operation>equals</operation>
                <valueField>Modelo_de_vehiculo__c.Marca__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Modelo_de_vehiculo__c</referenceTo>
        <relationshipLabel>Opportunities (Modelo)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modelo_Nombre__c</fullName>
        <label>Modelo Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modelo_Numero__c</fullName>
        <label>Modelo Numero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <label>Modelo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto_retoma__c</fullName>
        <label>Monto retoma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>N_Credito__c</fullName>
        <formula>Cr_dito__r.N__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <formula>TEXT(Cr_dito__r.N_ACTUAL__c)</formula>
        <label>N Actual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_de_Cuotas__c</fullName>
        <label>Nº de Cuotas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_de_serie_C_I__c</fullName>
        <label>N° de serie C.I.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Canal__c</fullName>
        <label>Nombre Canal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Operaciones__c</fullName>
        <label>Nombre Operaciones</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_cuenta_1__c</fullName>
        <label>Número cuenta 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_cuenta_2__c</fullName>
        <label>Número cuenta 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opcion_inmediata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opción inmediata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oportunidad_V_lida__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para determinar últimas oportunidades trabajadas.</description>
        <label>Oportunidad Válida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Otros_egresos__c</fullName>
        <label>Otros egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otros_ingresos__c</fullName>
        <label>Otros ingresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAC_cuenta_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAC cuenta 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAC_cuenta_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAC cuenta 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPU_retoma__c</fullName>
        <label>PPU</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pie_Porcentaje__c</fullName>
        <label>Pie Porcentaje</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pie__c</fullName>
        <label>Pie</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pie_formula__c</fullName>
        <description>( Pie__c +  Monto_retoma__c )* 100 /  Precio_vehiculo__c</description>
        <formula>(((Pie__c +  Monto_retoma__c)*100) / Precio_vehiculo__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Pie</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pie_m_nimo_auto_NUEVO__c</fullName>
        <label>Pie mínimo auto NUEVO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pie_m_nimo_auto_USADO__c</fullName>
        <label>Pie mínimo auto USADO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plazo_Cr_dito__c</fullName>
        <label>Plazo Crédito</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precio_del_Auto__c</fullName>
        <label>Precio del Auto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Precio_retoma__c</fullName>
        <label>Precio</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_vehiculo__c</fullName>
        <label>Precio vehículo</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primer_vencimiento__c</fullName>
        <label>Primer vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profesion__c</fullName>
        <label>Profesión</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quiero_agendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quiero agendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUT__c</fullName>
        <formula>Account.RUT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUT_empleador__c</fullName>
        <label>RUT empleador</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regi_n__c</fullName>
        <label>Región</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regi_n</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regimen_matrimonial__c</fullName>
        <label>Régimen matrimonial</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Estado_civil__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CB</fullName>
                    <label>Comunidad de Bienes</label>
                </value>
                <value>
                    <fullName>PG</fullName>
                    <label>Participación en los gananciales</label>
                </value>
                <value>
                    <fullName>SB</fullName>
                    <label>Separación total de bienes</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>No aplica</label>
                </value>
                <value>
                    <fullName>Sociedad conyugal</fullName>
                    <isActive>false</isActive>
                    <label>Sociedad conyugal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_empleador__c</fullName>
        <label>Región empleador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regi_n</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remate_finalizado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remate finalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renta__c</fullName>
        <label>Sueldo Líquido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_Total__c</fullName>
        <formula>Margen_nuevo_vehiculo__c + Margen_vehiculo_usado__c	+ Comision_dealer__c	- Costo_de_accion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilidad Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Respuesta_Servicio__c</fullName>
        <label>Respuesta Servicio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Respuesta_entidad_financiera__c</fullName>
        <label>Respuesta entidad financiera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preaprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Condicionado</fullName>
                </value>
                <value>
                    <fullName>No accesada</fullName>
                </value>
                <value>
                    <fullName>Prepagado</fullName>
                </value>
                <value>
                    <fullName>Respuesta 1</fullName>
                    <isActive>false</isActive>
                    <label>Respuesta 1</label>
                </value>
                <value>
                    <fullName>Respuesta 2</fullName>
                    <isActive>false</isActive>
                    <label>Respuesta 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>